k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: finance-api
  labels:
    app: finance-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: finance-api
  template:
    metadata:
      labels:
        app: finance-api
    spec:
      serviceAccountName: finance-api-sa
      # Apply Pod Security Standards (Restricted)
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 2000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: finance-api
        image: REPLACE_ME_IMAGE_URI:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
              - ALL
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: finance-api-svc
spec:
  selector:
    app: finance-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
